--- a/index.html
+++ b/index.html
@@ -146,13 +146,13 @@
       </h3>
       <ul style="list-style-type: none; padding-left: 0;">
        <li>
-        Custom furniture parts
+        Custom Furniture or Parts
        </li>
        <li>
-        Sign engraving
+        Custom Signs
        </li>
        <li>
-        Template creation
+        Templates or Patterns
        </li>
       </ul>
      </div>
@@ -165,10 +165,10 @@
         Prototyping
        </li>
        <li>
-        Replacement parts
+        New Design / Replacement Parts
        </li>
        <li>
-        Miniatures and models
+        Miniatures / Models
        </li>
       </ul>
      </div>
@@ -178,13 +178,13 @@
       </h3>
       <ul style="list-style-type: none; padding-left: 0;">
        <li>
-        Metal signage
+        Metal Signs
        </li>
        <li>
-        Brackets and flanges
+        Brackets / Flanges
        </li>
        <li>
-        Decorative panels
+        Decorative Panels (ie Decks/Stair Railing)
        </li>
       </ul>
      </div>
