--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         Brackets / Flanges
        </li>
        <li>
-        Decorative Panels (ie Decks/Stair Railing)
+        Decorative Panels (e.g. Decks/Stair Railing)
        </li>
       </ul>
      </div>
