--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         Prototyping
        </li>
        <li>
-        New Design / Replacement Parts
+        New / Replacement Parts
        </li>
        <li>
         Miniatures / Models
