--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
      About
     </h2>
     <p>
-     I'm Paul, I run a one-man shop. I like things that work well, look good. I'm here to help you bring ideas into the real world — precise, reliable, and made with care.
+     I'm Paul, I run a one-man shop. I like things that work well and look good. I'm here to help you bring ideas into the real world — precise, reliable, and made with care.
     </p>
     <p style="margin-top: 1.5rem; font-weight: bold;">
      <a href="https://www.instagram.com/threeleggedchairs" style="color:#f4d35e; text-decoration:none;" target="_blank">
